<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    tools:context=".DetectActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutAddStory1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/back_to_main_from_classification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="#26000000"
                android:elevation="2dp"
                android:padding="3dp"
                app:drawableStartCompat="@drawable/arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:letterSpacing="0.003"
                android:text="@string/garbage_photo_classification"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/image_add_story"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/image_preview"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutAddStory1"
            tools:src="@drawable/image_preview" />

        <TextView
            android:id="@+id/text_prev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/image_preview"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_add_story" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/navy"
            android:contentDescription="@string/logo_camera"
            android:src="@drawable/camera_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_prev"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/text_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/camera"
            app:layout_constraintEnd_toEndOf="@id/btn_camera"
            app:layout_constraintStart_toStartOf="@id/btn_camera"
            app:layout_constraintTop_toBottomOf="@id/btn_camera" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="100dp"
            android:backgroundTint="@color/navy"
            android:contentDescription="@string/gallery_icon"
            android:src="@drawable/gallery_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_prev"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/text_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gallery"
            app:layout_constraintEnd_toEndOf="@id/btn_gallery"
            app:layout_constraintStart_toStartOf="@id/btn_gallery"
            app:layout_constraintTop_toBottomOf="@id/btn_gallery" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="64dp"
            android:backgroundTint="#6C6868"
            android:text="@string/classify_garbage"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/text_gallery"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ProgressBar
            android:id="@+id/pb_loading_add_story"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>